lakes and rivers

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <option>perlin</option>
             <option>simplex</option>
         </select>
-		<button id="accept">Accept</button>
-		<button id="reject">Reject</button>
+		<button id="accept">Save Map</button>
+		<button id="reject">New Map</button>
+		<button id="use">Use This Map</button>
 	</div>
 	<script src="dist/gravis.js"></script>
 </body>
