working on regions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </select>
 		<button id="accept">Save Map</button>
 		<button id="reject">New Map</button>
-		<button id="use">Use This Map</button>
+		<button id="load">Load last map</button>
+	</div>
+	<div id="region_buttons">
+		<div id="pos">Region: <span id="rx"></span>,<span id="ry"></span></div>
 	</div>
 	<script src="dist/gravis.js"></script>
 </body>
