--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 	<div id="region_buttons">
 		<div id="pos">Region: <span id="rx"></span>,<span id="ry"></span></div>
 	</div>
+	<div id="saving-regions">
+		<h2>Saving regions</h2>
+		<div id="saving-regions-log"></div>
+	</div>
 	<script src="dist/gravis.js"></script>
 </body>
 </html>
